# SOTS-Hackathon

./: .env.example  .gitignore  README.md  docker-compose.yaml  index.html  package-lock.json  package.json  tailwind.config.js
backend/: .dockerignore  .env.example  .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  Dockerfile  README.md  README_MEKONG_DELTA.md  docker-compose.yml  prepare_sqlx.sh  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: routes_alerts.py  routes_health.py  routes_jobs.py  routes_stats.py  routes_tiles.py
backend/app/core/: aggregation.py  alerts.py  config.py  crud.py  db.py  models_sqlalchemy.py  raster_utils.py  s4a_infer.py  sentinelhub_client.py  spaces.py  time_utils.py
backend/app/workers/: celery_app.py  tasks_aggregate.py  tasks_alerts.py  tasks_discover.py  tasks_infer.py  tasks_preprocess.py
backend/assets/models/: .gitkeep
backend/migrations/: 001_initial.sql  20260131000001_init.sql  20260131000002_extended_schema.sql  20260131_satellite_tiles.sql
backend/ml/: download_weight.py
backend/ml/s4a_vendor/: README.md  __init__.py
backend/scripts/: README_europe_scan.md  __init__.py  download_hls_for_inference.py  init_admin_units.py  init_tiles_vn.py  register_model_s4a.py  scan_europe_sentinel2.py  test_connections.py
backend/src/: lib.rs  main.rs
backend/src/api/: routes.rs
backend/src/api/handlers/: auth.rs  chatbot.rs  farm.rs  health.rs  mod.rs  monitoring.rs
backend/src/api/middleware/: auth.rs
backend/src/application/: analyze_service.rs  chatbot_service.rs  dtos.rs  mod.rs  report_service.rs
backend/src/config/: mod.rs
backend/src/domain/: errors.rs  mod.rs  models.rs  repositories.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/ai/: mod.rs  segmentation.rs  spectral.rs
backend/src/infrastructure/db/: mod.rs
backend/src/infrastructure/geo/: mod.rs  vector_analysis.rs
backend/src/infrastructure/repositories/: alert_repo.rs  farm_repo.rs  mod.rs  satellite_image_repo.rs  spectral_indices_repo.rs  todo_repo.rs  user_repo.rs
backend/src/infrastructure/satellite/: mod.rs  sentinel_client.rs
backend/src/modules/: mod.rs
backend/src/modules/analytics/: controller.rs  mod.rs  models.rs  repository.rs
backend/src/modules/auth/: controller.rs  middleware.rs  mod.rs  models.rs  repository.rs  service.rs
backend/src/modules/dashboard/: controller.rs  mod.rs  models.rs  repository.rs
backend/src/shared/: app_state.rs  db.rs  error.rs  mod.rs  utils.rs
backend/tests/: __init__.py  conftest.py  integration_test.rs  test_01_env.py  test_02_db.py  test_03_spaces.py  test_04_sentinelhub_fetch.py  test_05_s4a_infer_patch.py  test_06_geotiff_write.py  test_07_area_stats.py
client/: README.md  (+5 more)
(+66 files in other folders)
