[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["AgriPulse Team"]
description = "High-performance backend for satellite image analysis and salinity intrusion detection"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bio-radar"
path = "src/main.rs"

[dependencies]
# Web Framework & Async Runtime
tokio = { version = "1", features = ["full", "tracing"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database & GIS
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
deadpool = "0.10"

# Geometry & GIS Processing
geo = "0.28"
geojson = "0.24"

# AI & Tensor Processing
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.17"

# Image Processing
image = "0.25"
tiff = "0.9"

# HTTP Client (for Sentinel API)
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Utilities
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
once_cell = "1.19"
parking_lot = "0.12"
bytes = "1"
futures = "0.3"

# Validation
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
