[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
geo-types = "0.7.18"
geojson = "0.24.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "migrate", "bigdecimal", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
wkt = "0.14.0"
image = "0.25"
bigdecimal = { version = "0.4", features = ["serde"] }
argon2 = "0.5.3"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["aws_lc_rs"] }
base64 = "0.22.1"
